fix(图表): 修复明细表表头分组后导出表头名称错误